[workspace]
members = ["leptos-cesium", "examples/simple-viewer", "examples/with-server"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-test = { version = "0.3", default-features = false }
web-sys = "0.3"
js-sys = "0.3"
paste = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.6"
tracing = "0.1"
thiserror = "2"
serde_json = "1"
console_error_panic_hook = "0.1"
log = "0.4"
