[workspace]
members = ["leptos-cesium", "examples/simple-viewer", "examples/with-server", "examples/with-entities", "examples/czml-viewer", "examples/geojson"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Alex rozgo <alex.rozgo@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-test = { version = "0.3", default-features = false }
web-sys = "0.3"
js-sys = "0.3"
paste = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.6"
tracing = "0.1"
thiserror = "2"
serde_json = "1"
console_error_panic_hook = "0.1"
log = "0.4"
