[package]
name = "leptos-cesium"
version = "0.0.1"
edition = "2021"
authors = ["Vertex Studio"]
description = "Cesium components for the Leptos web framework."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/vertexstudio/leptos-cesium"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Window",
    "console",
] }
js-sys = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, optional = true }
"serde-wasm-bindgen" = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
console_error_panic_hook = { workspace = true }
log = { workspace = true }

[features]
default = []
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]

[package.metadata.docs.rs]
all-features = true
