[package]
name = "leptos-cesium"
description = "Cesium components for the Leptos web framework."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "Window",
    "console",
] }
js-sys = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, optional = true }
"serde-wasm-bindgen" = { workspace = true }
tracing = { workspace = true, optional = true }
thiserror = { workspace = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
console_error_panic_hook = { workspace = true }
log = { workspace = true }

[features]
default = []
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[package.metadata.docs.rs]
all-features = true
