[package]
name = "custom-selection"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos-cesium = { path = "../../leptos-cesium" }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
