[package]
name = "geojson"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", default-features = false, features = ["csr"] }
leptos-cesium = { path = "../../leptos-cesium", default-features = false, features = ["csr"] }

[features]
csr = []
