[package]
name = "with-server"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8", optional = true }
console_error_panic_hook = "0.1"
console_log = "1"
cfg-if = "1"
leptos = { version = "0.8", default-features = false }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos-cesium = { path = "../../leptos-cesium", default-features = false }
log = "0.4"
tokio = { version = "1.43", features = ["rt", "macros", "rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = "0.2"
thiserror = "2"
tracing = { version = "0.1", optional = true }
http = "1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[features]
hydrate = ["leptos/hydrate", "leptos-cesium/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-cesium/ssr",
    "dep:tracing",
]

[package.metadata.cargo-all-features]
denylist = [
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "leptos_axum",
]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "with-server"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
